--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.38MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇭🇰 (已存活10天)香港-3.81MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-419.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇭🇰 香港-2.69MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇳 中国-312.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-330.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-390.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-1.36MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 柬埔寨-1.42MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: eed5c3e1-2d36-4429-8795-2ed74d374f23, sni: kh1.nodegz.top, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.54MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.38MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇭🇰 香港-2.69MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-317.2KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-400.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-620.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-440.6KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-428.5KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 柬埔寨-1.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-620.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 柬埔寨-1.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-620.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 柬埔寨-1.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-620.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活10天)香港-3.81MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 柬埔寨-1.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-620.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 柬埔寨-1.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-620.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 柬埔寨-1.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-620.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 柬埔寨-1.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-620.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
